--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.62.7",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.3",
     "lucide-react": "^0.468.0",
     "prop-types": "^15.8.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.0.1",
     "react-slider": "^2.0.6",
     "react-toastify": "^10.0.6",
